# seci-fdre-v-rfs-13-0014

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: project.ideal_1mw.yaml  project.yaml
data/ideal/: README.md
release/windows/: build-portable.ps1  clear-build-artifacts.ps1
scripts/: podman-down.sh  podman-up.sh
seci_fdre_v_model/: __init__.py  aligned_energy_report.py  cli.py  config.py  desktop.py  ideal_year_profiles.py  profile_templates.py  results.py  runner.py  runtime.py  scenarios.py  tender_inputs.py  workbook_export.py
seci_fdre_v_model/core/: pipeline.py
seci_fdre_v_model/data/: loaders.py  preprocessing.py
seci_fdre_v_model/flows/: __init__.py  section_outputs.py
seci_fdre_v_model/profile_assets/: seci_fdre_ii_revised_annexure_b.csv  seci_fdre_v_amendment_03.csv
seci_fdre_v_model/web/: __init__.py  app.py  models.py  services.py
seci_fdre_v_model/web/static/: app.css  app.js
seci_fdre_v_model/web/templates/: _study_profile_run.html  base.html  config.html  dashboard.html  inputs.html  runs.html
tests/: test_aligned_energy_report.py  test_desktop.py  test_project.py  test_web_app.py
